Draw static elements on board

--- a/build.emscripten/index.html
+++ b/build.emscripten/index.html
@@ -1,15 +1,16 @@
 <!doctype html>
 
 <html lang="en">
-    <head>
-      <meta charset="utf-8">
-      <title>Monopoly</title>
-      <meta name="description" content="Monopoly">
-      <meta name="author" content="Jeremy Meador">
-    </head>
+<head>
+    <meta charset="utf-8">
+    <title>Monopoly</title>
+    <meta name="description" content="Monopoly">
+    <meta name="author" content="Jeremy Meador">
+    <script src="https://kit.fontawesome.com/cef992d25f.js" crossorigin="anonymous"></script>
+</head>
     <body>
         <script type="text/javascript" src="interface.js"></script>
         <script type="text/javascript" src="monopoly.js"></script>
-        <canvas id="boardCanvas" width="200" height="200"></canvas>
+        <canvas id="boardCanvas" width="750" height="750" ></canvas>
     </body>
 </html>
