Inputs now work through web client

--- a/build.emscripten/index.html
+++ b/build.emscripten/index.html
@@ -8,9 +8,17 @@
     <meta name="author" content="Jeremy Meador">
     <script src="https://kit.fontawesome.com/cef992d25f.js" crossorigin="anonymous"></script>
 </head>
-    <body>
-        <script type="text/javascript" src="interface.js"></script>
-        <script type="text/javascript" src="monopoly.js"></script>
-        <canvas id="boardCanvas" width="750" height="750" ></canvas>
-    </body>
+<body>
+    <script type="text/javascript" src="interface.js"></script>
+    <script type="text/javascript" src="monopoly.js"></script>
+    <canvas id="boardCanvas" width="750" height="750"></canvas>
+    <button id="rollButton" type="button">Roll</button>
+    <button id="buyPropertyButton" type="button">Buy Property</button>
+    <button id="auctionPropertyButton" type="button">Auction Property</button>
+    <button id="useGetOutOfJailFreeCardButton" type="button">GOJF</button>
+    <button id="payBailButton" type="button">Pay Bail</button>
+    <button id="bidButton" type="button">Bid</button>
+    <button id="declineBidButton" type="button">Decline Bid</button>
+    <button id="endTurnButton" type="button">End Turn</button>
+</body>
 </html>
