--- a/build.emscripten/index.html
+++ b/build.emscripten/index.html
@@ -7,18 +7,36 @@
     <meta name="description" content="Monopoly">
     <meta name="author" content="Jeremy Meador">
     <script src="https://kit.fontawesome.com/cef992d25f.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css"></link>
 </head>
 <body>
     <script type="text/javascript" src="interface.js"></script>
     <script type="text/javascript" src="monopoly.js"></script>
-    <canvas id="boardCanvas" width="750" height="750"></canvas>
-    <button id="rollButton" type="button">Roll</button>
-    <button id="buyPropertyButton" type="button">Buy Property</button>
-    <button id="auctionPropertyButton" type="button">Auction Property</button>
-    <button id="useGetOutOfJailFreeCardButton" type="button">GOJF</button>
-    <button id="payBailButton" type="button">Pay Bail</button>
-    <button id="bidButton" type="button">Bid</button>
-    <button id="declineBidButton" type="button">Decline Bid</button>
-    <button id="endTurnButton" type="button">End Turn</button>
+    <div class="layeredArea">
+        <div class="backgroundLayer">
+            <canvas id="boardCanvas" width="750" height="750"></canvas>
+        </div>
+        <div class="foregroundLayer">
+            <div id="buttonContainer">
+                <div>
+                    <span id="die1" class="dice fas fa-dice-d6"></span>
+                    <span id="die2" class="dice fas fa-dice-d6"></span>
+                </div>
+                <div>
+                    <button class="button" id="rollButton" type="button"><i class="fas fa-dice"></i></button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="playerNameLabel">Player 1</div>
+    <button class="button" id="buyPropertyButton" type="button">Buy Property</button>
+    <button class="button" id="auctionPropertyButton" type="button">Auction Property</button>
+    <button class="button" id="useGetOutOfJailFreeCardButton" type="button">GOJF</button>
+    <button class="button" id="payBailButton" type="button">Pay Bail</button>
+    <button class="button" id="bidButton" type="button">Bid</button>
+    <button class="button" id="declineBidButton" type="button">Decline Bid</button>
+    <button class="button" id="endTurnButton" type="button">End Turn</button>
+    <div></div>
+    <button id="resignButton" type="button">Resign</button>
 </body>
 </html>
