--- a/build.emscripten/index.html
+++ b/build.emscripten/index.html
@@ -7,35 +7,79 @@
     <meta name="description" content="Monopoly">
     <meta name="author" content="Jeremy Meador">
     <script src="https://kit.fontawesome.com/cef992d25f.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="styles.css"></link>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Righteous">
 </head>
 <body>
     <script type="text/javascript" src="interface.js"></script>
     <script type="text/javascript" src="monopoly.js"></script>
     <div class="layeredArea">
         <div class="backgroundLayer">
-            <canvas id="boardCanvas" width="750" height="750"></canvas>
+            <canvas id="boardCanvas" width="960" height="960"></canvas>
         </div>
-        <div class="foregroundLayer">
-            <div id="buttonContainer">
-                <div>
-                    <span id="die1" class="dice fas fa-dice-d6"></span>
-                    <span id="die2" class="dice fas fa-dice-d6"></span>
-                </div>
-                <div>
-                    <button class="button" id="rollButton" type="button"><i class="fas fa-dice"></i></button>
-                </div>
+        <div class="foregroundLayer" id="overlay">
+            <div class="topLeft">
+                <table id="playerTable">
+                </table>
             </div>
+            <div class="center">
+                <i id="die1" class="dice fas fa-dice-d6"></i>
+                <i id="die2" class="dice fas fa-dice-d6"></i>
+            </div>
+            <button id="startManageButton"
+                    class="button topRight"
+                    type="button">
+                Manage Property
+            </button>
+            <button id="finishManageButton"
+                    class="button topRight"
+                    type="button">
+                Done
+            </button>
+            <button id="rollButton"
+                    class="button center"
+                    type="button">
+                <i class="dice fas fa-dice fa-pulse"></i>
+            </button>
+            <button id="endTurnButton"
+                    class="button center"
+                    type="button">
+                End Turn
+            </button>
+            <button id="buyPropertyButton"
+                    class="button bottomLeft"
+                    type="button">
+                Buy Property
+            </button>
+            <button id="auctionPropertyButton"
+                    class="button bottomRight"
+                    type="button">
+                Auction Property
+            </button>
+            <button id="bidButton"
+                    class="button bottomLeft"
+                    type="button">
+                Bid
+            </button>
+            <button id="declineBidButton"
+                    class="button bottomRight"
+                    type="button">
+                Decline Bid
+            </button>
+            <button id="payBailButton"
+                    class="button bottomLeft"
+                    type="button">
+                Pay Bail
+            </button>
+            <button id="useGetOutOfJailFreeCardButton"
+                    class="button bottomRight"
+                    type="button">
+                Use Card
+            </button>
         </div>
     </div>
     <div id="playerNameLabel">Player 1</div>
-    <button class="button" id="buyPropertyButton" type="button">Buy Property</button>
-    <button class="button" id="auctionPropertyButton" type="button">Auction Property</button>
-    <button class="button" id="useGetOutOfJailFreeCardButton" type="button">GOJF</button>
-    <button class="button" id="payBailButton" type="button">Pay Bail</button>
-    <button class="button" id="bidButton" type="button">Bid</button>
-    <button class="button" id="declineBidButton" type="button">Decline Bid</button>
-    <button class="button" id="endTurnButton" type="button">End Turn</button>
     <div></div>
     <button id="resignButton" type="button">Resign</button>
 </body>
