UI for mortgaging and unmortgaging propertiesamend me

--- a/build.emscripten/index.html
+++ b/build.emscripten/index.html
@@ -77,10 +77,18 @@
                     type="button">
                 Use Card
             </button>
+            <button id="mortgageButton"
+                    class="button bottomRight"
+                    type="button">
+                Mortgage
+            </button>
+            <button id="unmortgageButton"
+                    class="button bottomLeft"
+                    type="button">
+                Unmortgage
+            </button>
         </div>
     </div>
-    <div id="playerNameLabel">Player 1</div>
-    <div></div>
     <button id="resignButton" type="button">Resign</button>
 </body>
 </html>
