--- a/build.emscripten/index.html
+++ b/build.emscripten/index.html
@@ -23,9 +23,11 @@
                 <table id="playerTable">
                 </table>
             </div>
-            <div class="center">
+            <div id="diceLabel" class="center">
                 <i id="die1" class="dice fas fa-dice-d6"></i>
                 <i id="die2" class="dice fas fa-dice-d6"></i>
+            </div>
+            <div id="gameOverLabel" class="center">
             </div>
             <button id="startManageButton"
                     class="button topRight"
@@ -40,7 +42,7 @@
             <button id="rollButton"
                     class="button center"
                     type="button">
-                <i class="dice fas fa-dice fa-pulse"></i>
+                <i class="dice fas fa-dice"></i>
             </button>
             <button id="endTurnButton"
                     class="button center"
@@ -86,6 +88,16 @@
                     class="button bottomLeft"
                     type="button">
                 Unmortgage
+            </button>
+            <button id="sellBuildingButton"
+                    class="button bottomRight"
+                    type="button">
+                Sell building
+            </button>
+            <button id="buyBuildingButton"
+                    class="button bottomLeft"
+                    type="button">
+                Buy building
             </button>
         </div>
     </div>
