UI cleanups. Start of trading UI

--- a/build.emscripten/index.html
+++ b/build.emscripten/index.html
@@ -55,7 +55,7 @@
             <button id="buyPropertyButton"
                     class="button bottomLeft"
                     type="button">
-                <i class="icon fas fa-money-check-alt"></i><br />
+                <div id="propertyPriceLabel">$0</div>
                 Buy Property
             </button>
             <button id="auctionPropertyButton"
@@ -120,6 +120,17 @@
                     class="button bottomLeft"
                     type="button">
                 Buy building
+            </button>
+            <button id="declineTradeButton"
+                    class="button bottomRight"
+                    type="button">
+                <i class="icon fas fa-handshake-slash"></i><br />
+                Decline Trade
+            </button>
+            <button id="cancelTradeButton"
+                    class="button bottomRight"
+                    type="button">
+                Cancel Trade
             </button>
         </div>
     </div>
