Add README, start of trading interface

--- a/build.emscripten/index.html
+++ b/build.emscripten/index.html
@@ -20,8 +20,10 @@
         </div>
         <div class="foregroundLayer" id="overlay">
             <div class="topLeft">
-                <table id="playerTable">
-                </table>
+                <table id="playerTable"></table>
+            </div>
+            <div class="center" id="tradeContainer">
+                <table id="tradeTable"></table>
             </div>
             <div id="diceLabel" class="middleRight">
                 <i id="die1" class="dice fas fa-dice-d6"></i>
