Trade UI allows trading deeds

--- a/build.emscripten/index.html
+++ b/build.emscripten/index.html
@@ -123,6 +123,12 @@
                     type="button">
                 Buy building
             </button>
+            <button id="offerTradeButton"
+                    class="button bottomLeft"
+                    type="button">
+                <i class="icon fas fa-handshake"></i><br />
+                Offer Trade
+            </button>
             <button id="declineTradeButton"
                     class="button bottomRight"
                     type="button">
