UI supports trading cash

--- a/build.emscripten/index.html
+++ b/build.emscripten/index.html
@@ -23,6 +23,7 @@
                 <table id="playerTable"></table>
             </div>
             <div class="center" id="tradeContainer">
+                <input type="range" min="0" max="0" value="0" class="slider" id="tradeSlider">
                 <table id="tradeTable"></table>
             </div>
             <div id="diceLabel" class="middleRight">
