Utility and Railroad deed cards

--- a/build.emscripten/index.html
+++ b/build.emscripten/index.html
@@ -24,16 +24,24 @@
             </div>
             <div class="center" id="deedTableContainer">
                 <table id="deedTable">
-                    <tbody>
+                    <thead>
                         <tr> <th id="propertyLabel" colspan="2"> </th></tr>
-                        <tr> <td style="width: 65%">Rent</td> <td id="baseRentLabel" style="width: 35%">$0</td> </tr>
-                        <tr> <td>With set</td> <td id="rent0Label">$0</td> </tr>
-                        <tr> <td>With 1 house</td> <td id="rent1Label">$0</td> </tr>
-                        <tr> <td>With 2 houses</td> <td id="rent2Label">$0</td> </tr>
-                        <tr> <td>With 3 houses</td> <td id="rent3Label">$0</td> </tr>
-                        <tr> <td>With 4 houses</td> <td id="rent4Label">$0</td> </tr>
-                        <tr> <td>With HOTEL</td> <td id="rent5Label">$0</td> </tr>
-                        <tr> <td>Building Cost</td> <td id="buildingCostLabel">$0</td> </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="realEstateDeedRow"> <td style="width: 65%">Rent</td> <td id="baseRentLabel" style="width: 35%">$0</td> </tr>
+                        <tr class="realEstateDeedRow"> <td>With set</td> <td id="rent0Label">$0</td> </tr>
+                        <tr class="realEstateDeedRow"> <td>With 1 house</td> <td id="rent1Label">$0</td> </tr>
+                        <tr class="realEstateDeedRow"> <td>With 2 houses</td> <td id="rent2Label">$0</td> </tr>
+                        <tr class="realEstateDeedRow"> <td>With 3 houses</td> <td id="rent3Label">$0</td> </tr>
+                        <tr class="realEstateDeedRow"> <td>With 4 houses</td> <td id="rent4Label">$0</td> </tr>
+                        <tr class="realEstateDeedRow"> <td>With HOTEL</td> <td id="rent5Label">$0</td> </tr>
+                        <tr class="realEstateDeedRow"> <td>Building Cost</td> <td id="buildingCostLabel">$0</td> </tr>
+                        <tr class="railroadDeedRow"> <td>Rent</td> <td>$25</td> </tr>
+                        <tr class="railroadDeedRow"> <td>With 2 R.R.'s</td> <td>$50</td> </tr>
+                        <tr class="railroadDeedRow"> <td>With 3 R.R.'s</td> <td>$100</td> </tr>
+                        <tr class="railroadDeedRow"> <td>With 4 R.R.'s</td> <td>$200</td> </tr>
+                        <tr class="utilityDeedRow"> <td>Rent</td> <td>$4 x <i class="icon fas fa-dice"></i></td> </tr>
+                        <tr class="utilityDeedRow"> <td>With 2 Util</td> <td>$10 x <i class="icon fas fa-dice"></i></td> </tr>
                     </tbody>
                 </table>
             </div>
