Added a text log to the web client

--- a/build.emscripten/index.html
+++ b/build.emscripten/index.html
@@ -6,12 +6,12 @@
     <title>Monopoly</title>
     <meta name="description" content="Monopoly">
     <meta name="author" content="Jeremy Meador">
-    <script src="https://kit.fontawesome.com/cef992d25f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Righteous">
 </head>
 <body>
+    <script src="https://kit.fontawesome.com/cef992d25f.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="interface.js"></script>
     <script type="text/javascript" src="monopoly.js"></script>
     <div class="layeredArea">
@@ -41,7 +41,7 @@
                         <tr class="railroadDeedRow"> <td>With 3 R.R.'s</td> <td>$100</td> </tr>
                         <tr class="railroadDeedRow"> <td>With 4 R.R.'s</td> <td>$200</td> </tr>
                         <tr class="utilityDeedRow"> <td>Rent</td> <td>$4 x <i class="icon fas fa-dice"></i></td> </tr>
-                        <tr class="utilityDeedRow"> <td>With 2 Util</td> <td>$10 x <i class="icon fas fa-dice"></i></td> </tr>
+                        <tr class="utilityDeedRow"> <td>With 2 </td> <td>$10 x <i class="icon fas fa-dice"></i></td> </tr>
                     </tbody>
                 </table>
             </div>
@@ -168,6 +168,7 @@
             </button>
         </div>
     </div>
+    <textArea id="log"></textArea>
     <button id="resignButton" type="button">Resign</button>
 </body>
 </html>
